# django-gdaps

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: APIs.rst  Contributing.rst  Installation.rst  Introduction.rst  conf.py  index.rst  installation.rst  usage.rst
docs/usage/: installation.rst  usage.rst
gdaps/: __init__.py  admin.py  api.py  apps.py  conf.py  exceptions.py  models.py  pluginmanager.py  validators.py
gdaps/drf/: __init__.py  apps.py  urls.py
gdaps/frontend/: __init__.py  api.py  apps.py  conf.py  urls.py  views.py
gdaps/frontend/engines/: __init__.py  vue.py
gdaps/frontend/engines/pyside/: __init__.py
gdaps/frontend/engines/vue/: __init__.py
gdaps/frontend/frontend/medux-plugins-frontend/: index.js
gdaps/frontend/management/commands/: _runserver.py  initfrontend.py  startplugin.py  syncplugins.py
gdaps/frontend/pkgmgr/: __init__.py
gdaps/graphene/: README.md  __init__.py  api.py  apps.py  interfaces.py  schema.py
gdaps/management/commands/: initfrontend.py  initializeplugin.py  initializeplugins.py  startplugin.py  syncplugins.py
gdaps/management/templates/: __init__.py
gdaps/migrations/: 0001_initial.py
scripts/: mkpkg.sh
tests/: conftest.py  interfaces.py  pytest.ini  test_cmd_initialize.py  test_extensionpoints.py  test_gdaps_settings.py  test_implements.py  test_implements_enabled_disabled.py  test_interfaces.py  test_interfaces_services.py  test_plugin1.py  test_pluginmanager.py  test_settings.py
tests/plugins/: __init__.py
tests/plugins/plugin1/: apps.py  conf.py
tests/plugins/plugin2/: apps.py
(+29 files in other folders)
