
[flake8]
max-line-length = 119

[tool:pytest]
omit = tests/*, setup.py
addopts = --cov=gdaps

[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py


[metadata]
name = gdaps
version = attr:gdaps.__version__
description = "Generic Django Apps Plugin System"
long_description = file: README.md
long_description_content_type = text/markdown
author = Christian González
author_email = christian.gonzalez@nerdocs.at
url = https://gdaps.readthedocs.io
license = GPLv3
# If you use a license file activate the line below.
# license_file = LICENSE
project_urls =
    Documentation = https://gdaps.readthedocs.io
    Source = https://gitlab.com/nerdocs/gdaps
    Tracker = https://gitlab.com/nerdocs/gdaps/issues

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
include_package_data = True
;package_dir=
;    =.
packages = find:
install_requires =
    django
python_requires = >=3.6

[options.extras_require]
dev =
    check-manifest
    pytest==4.6.3
    pytest-cov==2.7.1
    twine
    django-debug-toolbar

#[options.packages.find]
#where =
#    src
